@@ -1,5 +1,8 @@
 Changes to Version 2.0-6
-    o  change influenceIndexPlots to used type="h" rather than type="l"
+
+    o  change influenceIndexPlots to used type="h" rather than type="l".
+    
+    o  added surface.alpha and ellipsoid.alpha arguments to scatter3d.
 
 Changes to Version 2.0-5
 
